# cpc-claude-md

./: .env.example  .gitignore  README.md  SKILLS.md  pyproject.toml
.github/workflows/: pages.yml
data/task-cpc-camp-2026-summary/: cpc-camp-2026-notes.md
data/task-cpc-camp-2026-summary-distributed/: day1.md  day2.md  day3.md  day4.md  day5.md
docker/: Dockerfile.sandbox  Dockerfile.task-distributed  Dockerfile.task-summary
examples/: my_agent.py
frontend/: app.js  cpc-viz.js  index.html  style.css  w-distribution.js
scripts/: demo.py  run_agent.py  run_round.py  run_server.py  test_local.py
src/cpc/: config.py  models.py  supabase_client.py
src/cpc/agent/: base.py  claude_api.py  claude_code_agent.py  llm_agent.py  proposer.py  reviewer.py  runner.py
src/cpc/sandbox/: base.py  docker_sandbox.py  worktree_sandbox.py
src/cpc/server/: api.py  app.py  mhng_engine.py  sample_store.py
supabase/migrations/: 20250325000000_init.sql  20250325000001_activity.sql  20250325000002_w_pool.sql  20250326000000_embedding.sql  20250326000001_specializations.sql
tasks/: cpc-camp-2026-summary-distributed.yaml  cpc-camp-2026-summary.yaml  example.yaml
