[project]
name = "cpc"
version = "0.1.0"
description = "Collective Predictive Coding platform for distributed Bayesian inference with AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0.3",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "supabase>=2.0",
]
agent-llm = [
    "anthropic>=0.52",
]
docker = [
    "docker>=7.1",
]
all = [
    "cpc[server,agent-llm,docker]",
]

[project.scripts]
cpc-server = "cpc.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpc"]
